[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Spawner.gd" type="Script" id=1]

[node name="Spawner" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]

[node name="DecreaseTimer" type="Timer" parent="."]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="DecreaseTimer" to="." method="_on_DecreaseTimer_timeout"]
